--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@ main {
   text-align: center;
   font-size: 2rem;
   background-color: transparent;
-  transition: outline .15s ease-in;
+  transition: outlinex .15s ease-in;
 }
 
 .url-input:focus {
